workload/laravel-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
spec:
  type: ClusterIP #NodePort
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: laravel
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-deployment
  labels:
    app: laravel
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 50%
       maxUnavailable: 50%
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      name: laravel
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: harbor.docker.com/app/laravel:0.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "500Gi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 3
            periodSeconds: 3
      imagePullSecrets:
            - name: harbor-registry
