workload/laravel-mysql.yaml
kind: StatefulSet 
apiVersion: apps/v1 
metadata: 
  name: mysql-statefulset
  labels:
    app: mysql 
spec: 
  selector: 
    matchLabels:
      app: mysql 
  serviceName: mysql-service
  template: 
    metadata: 
      labels: 
        app: mysql 
    spec:
      containers: 
        - name: mysql 
          image: harbor.docker.com/app/mysql:0.1
          args:
           - "--ignore-db-dir=lost+found"
          ports: 
            - containerPort: 3306 
          volumeMounts: 
            - mountPath: /var/lib/mysql
              name: mysql-storage
      imagePullSecrets:
            - name: harbor-registry
      volumes:
        - name: mysql-storage
          persistentVolumeClaim: 
            claimName: mysql-persistentvolumeclaim
---
kind: Service 
apiVersion: v1 
metadata: 
  name: mysql-service 
  labels: 
    app: mysql
spec: 
  selector: 
    app: mysql 
  ports: 
    - port: 3306 
      targetPort: 3306
