workload/laravel-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1 #tells deployment to run 3 pods matching the template
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 25%
       maxUnavailable: 25%
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: harbor.docker.com/app/nginx:0.1
        resources:
          limits:
            memory: "512Mi"      #memory limit
          requests:
            cpu: "100m"          #cpu requested
            memory: "256Mi"      #memory requested
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 12
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 80
          timeoutSeconds: 1
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
            - name: harbor-registry

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - name: http
    port: 80
    targetPort: 80
