workload/laravel-redis.yaml
kind: Deployment 
apiVersion: apps/v1 
metadata: 
  name: redis-deployment 
  labels: 
    app: redis
spec: 
  selector: 
    matchLabels: 
      app: redis 
  template: 
    metadata: 
      labels: 
        app: redis
    spec: 
      containers: 
        - name: redis 
          image: harbor.docker.com/app/redis:0.1
          ports: 
            - containerPort: 6379
      imagePullSecrets:
            - name: harbor-registry

---
kind: Service 
apiVersion: v1 
metadata: 
  name: redis-service 
spec: 
  selector: 
    app: redis 
  ports:
    - port: 6379
